--- a/Fixed Withdrawal Lifecycle Retirement Simulation Version 4.1
+++ b/Fixed Withdrawal Lifecycle Retirement Simulation Version 4.1
@@ -100,7 +100,7 @@ ACCUMULATION_WEIGHTS = np.array([0.3, 0.2, 0.15, 0.10, 0.05, 0.2])
 # Withdrawal Phase Portfolio
 WITHDRAWAL_WEIGHTS = np.array([0.6, 0.0, 0.2, 0.0, 0.0, 0.2])
 
-# Manual Asset Assumptions (annualized)
+# Manual Asset Assumptions (annualized) (In this example mean is forecasted, while variance and covariance is sourced from Testfol.io
 expected_returns_geometric = np.array([0.0866, 0.12, 0.0866, 0.09, 0.09, 0.0433])
 volatilities = np.array([0.1913, 0.3835, 0.1837, 0.2248, 0.1609, 0.2306])
 correlations = np.array([
